--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,6 @@ jobs:
 
     - name: Compile
       uses: ArminJo/arduino-test-compile@v2
-      arduino-board-fqbn: esp8266:esp8266:huzzah:eesz=4M3M,xtal=80
-      platform-url: https://raw.githubusercontent.com/espressif/arduino-esp32/gh-pages/package_esp32_index.json
-      required-libraries: Servo,Adafruit NeoPixel
+      with:
+        arduino-board-fqbn: esp32:esp32:esp32
+        platform-url: https://raw.githubusercontent.com/espressif/arduino-esp32/gh-pages/package_esp32_index.json
