--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,8 +9,26 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
+    - name: Checkout ESPAsyncWebServer
+      uses: actions/checkout@v2
+      with:
+        repository: me-no-dev/ESPAsyncWebServer
+        ref: master
+        path: CustomESPAsyncWebServer
+
+    - name: Checkout AsyncTCP
+      uses: actions/checkout@v2
+      with:
+        repository: me-no-dev/AsyncTCP
+        ref: master
+        path: CustomAsyncTCP
+
     - name: Compile
       uses: ArminJo/arduino-test-compile@v2
       with:
         arduino-board-fqbn: esp32:esp32:esp32
         platform-url: https://raw.githubusercontent.com/espressif/arduino-esp32/gh-pages/package_esp32_index.json
+        required-libraries: AceButton,WebSockets,SocketIoClient,ESPAsyncWebServer,AsyncTCP
+
+    - name: See dist directory
+      run: ls
