--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
       with:
         arduino-board-fqbn: esp32:esp32:esp32
         platform-url: https://raw.githubusercontent.com/espressif/arduino-esp32/gh-pages/package_esp32_index.json
-        required-libraries: AceButton,WebSockets,SocketIoClient,ESPAsyncWebServer,AsyncTCP
+        required-libraries: AceButton
 
     - name: See dist directory
       run: ls
