--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,13 +1,38 @@
-name: Build
+# This is the name of the workflow, visible on GitHub UI.
+name: build
+
+# Here we tell GitHub to run the workflow when a commit
+# is pushed or a Pull Request is opened.
 on: push
 
+# This is the list of jobs that will be run concurrently.
+# Since we use a build matrix, the actual number of jobs
+# started depends on how many configurations the matrix
+# will produce.
 jobs:
-  compile:
-    runs-on: ubuntu-latest
-    name: Compile Firmware
-    steps:
-    - name: Hello world action step
-      id: hello
-      uses: interactionresearchstudio/YoYoMachines-FirmwareCompiler@v0.2
-      with:
-        repo-name: 'ESP32-SOCKETIO'
+  # This is the platform GitHub will use to run our workflow, we
+  # pick Windows for no particular reason.
+  runs-on: ubuntu-latest
+
+  # This is the list of steps this job will run.
+  steps:
+    - name: Checkout
+      uses: actions/checkout@master
+
+    - name: Setup Arduino CLI
+      uses: arduino/setup-arduino-cli@v1.0.0
+
+    - name: Install platform
+      run: |
+        arduino-cli core update-index --additional-urls https://raw.githubusercontent.com/espressif/arduino-esp32/gh-pages/package_esp32_index.json
+        arduino-cli core install esp32:esp32 --additional-urls https://raw.githubusercontent.com/espressif/arduino-esp32/gh-pages/package_esp32_index.json
+
+    - name: Install libraries
+      run: |
+        arduino-cli lib install FastLED
+        arduino-cli lib install WebSockets
+        arduino-cli lib install ArduinoJson
+        arduino-cli lib install AceButton
+
+    - name: Get libs folder
+      run: find / -name "libraries" #arduino-cli compile --fqbn ${{ matrix.fqbn }} ./blink
