--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,5 +32,26 @@ jobs:
           arduino-cli lib install ArduinoJson
           arduino-cli lib install AceButton
 
-      - name: Get libs folder
-        run: find / -name "libraries" #arduino-cli compile --fqbn ${{ matrix.fqbn }} ./blink
+      - name: Checkout ESPAsyncWebServer
+        uses: actions/checkout@master
+        with:
+          repository: me-no-dev/ESPAsyncWebServer
+
+      - name: Checkout AsyncTCP
+        uses: actions/checkout@master
+        with:
+          repository: me-no-dev/AsyncTCP
+
+      - name: Checkout SocketIoClient
+        uses: actions/checkout@master
+        with:
+          repository: timum-viw/socket.io-client
+
+      - name: Move libs to Arduino directory
+        run: |
+          cp ESPAsyncWebServer Arduino/libraries/ESPAsyncWebServer
+          cp AsyncTCP Arduino/libraries/AsyncTCP
+          cp SocketIoClient Arduino/libraries/SocketIoClient
+
+      - name: Name installed libraries
+        run: arduino-cli lib list
