add custom libs

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,22 +36,23 @@ jobs:
         uses: actions/checkout@master
         with:
           repository: me-no-dev/ESPAsyncWebServer
+        run: mv ESPAsyncWebServer Arduino/libraries/ESPAsyncWebServer
 
-      - name: Checkout AsyncTCP
-        uses: actions/checkout@master
-        with:
-          repository: me-no-dev/AsyncTCP
+      #- name: Checkout AsyncTCP
+      #  uses: actions/checkout@master
+      #  with:
+      #    repository: me-no-dev/AsyncTCP
+#
+#      - name: Checkout SocketIoClient
+#        uses: actions/checkout@master
+#        with:
+#          repository: timum-viw/socket.io-client
 
-      - name: Checkout SocketIoClient
-        uses: actions/checkout@master
-        with:
-          repository: timum-viw/socket.io-client
-
-      - name: Move libs to Arduino directory
-        run: |
-          cp ESPAsyncWebServer Arduino/libraries/ESPAsyncWebServer
-          cp AsyncTCP Arduino/libraries/AsyncTCP
-          cp SocketIoClient Arduino/libraries/SocketIoClient
+#      - name: Move libs to Arduino directory
+#        run: |
+#          cp ESPAsyncWebServer Arduino/libraries/ESPAsyncWebServer
+#          cp AsyncTCP Arduino/libraries/AsyncTCP
+#          cp SocketIoClient Arduino/libraries/SocketIoClient
 
       - name: Name installed libraries
         run: arduino-cli lib list
