--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,9 +52,9 @@ jobs:
 
       - name: Move libs to Arduino directory
         run: |
-          cp ESPAsyncWebServer Arduino/libraries/ESPAsyncWebServer
-          cp AsyncTCP Arduino/libraries/AsyncTCP
-          cp SocketIoClient Arduino/libraries/SocketIoClient
+          mv ESPAsyncWebServer Arduino/libraries/ESPAsyncWebServer
+          mv AsyncTCP Arduino/libraries/AsyncTCP
+          mv SocketIoClient Arduino/libraries/SocketIoClient
 
       - name: Name installed libraries
         run: arduino-cli lib list
