--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -102,7 +102,7 @@ jobs:
         run: |
           python esp32_binary_merger/merge_bin_esp.py \
             --output_name app-combined.bin \
-            --bin_path ESP32_SOCKETIO/helpers/bootloader_qio_80m.bin build/ESP32_SOCKETIO.ino.partitions.bin build/ESP32_SOCKETIO.ino.bin build/spiffs.bin \
+            --bin_path ESP32-SOCKETIO/helpers/bootloader_qio_80m.bin build/ESP32-SOCKETIO.ino.partitions.bin build/ESP32-SOCKETIO.ino.bin build/spiffs.bin \
             --bin_address 0x1000 0x8000 0x10000 0x290000
           mv output/app-combined.bin build/app-combined.bin
 
