--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -82,6 +82,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y make gcc build-essential
+          find / -name "mkspiffs" 
 
       - name: Build mkspiffs
         run: |
