--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,9 +78,10 @@ jobs:
 
       - name: Merge binaries
         run: |
+          ls /home/runner/.arduino15/packages/esp32/tools/sdk/bin
           python esp32_binary_merger/merge_bin_esp.py \
             --output_name app-combined.bin \
-            --bin_path ESP32-SOCKETIO/helpers/bootloader_qio_80m.bin build/ESP32-SOCKETIO.ino.partitions.bin build/ESP32-SOCKETIO.ino.bin build/spiffs.bin \
+            --bin_path /home/runner/.arduino15/packages/esp32/tools/sdk/bin/bootloader_dio_80m.bin build/ESP32-SOCKETIO.ino.partitions.bin build/ESP32-SOCKETIO.ino.bin build/spiffs.bin \
             --bin_address 0x1000 0x8000 0x10000 0x150000
           mv output/app-combined.bin build/app-combined.bin
           mv build/ESP32-SOCKETIO.ino.bin build/app.bin
